# api/router.go
@@ -21,7 +21,8 @@ func RegisterPath(e *echo.Echo, authController *auth.Controller, userController 
 
 	//user with Versioning endpoint
 	userV1 := e.Group("v1/users")
-	userV1.GET("/:id", userController.FindUserByID)
+	// userV1.GET("/:id", userController.FindUserByID)
+	userV1.GET("/:username", userController.FindUserByUsername)
 	userV1.GET("", userController.FindAllUser)
 	userV1.POST("", userController.InsertUser)
 	userV1.PUT("/:id", userController.UpdateUser)
