# api/v1/user/response/get_user.go
@@ -2,16 +2,16 @@ package response
 
 import (
 	"go-hexagonal/business/user"
-	"time"
 )
 
 //GetUserResponse Get user by ID response payload
 type GetUserResponse struct {
-	ID         int       `json:"id"`
-	Name       string    `json:"name"`
-	Username   string    `json:"username"`
-	ModifiedAt time.Time `json:"modified_at"`
-	Version    int       `json:"version"`
+	ID        int    `json:"id"`
+	Firstname string `json:"first_name"`
+	Lastname  string `json:"last_name"`
+	Email     string `json:"email"`
+	Username  string `json:"username"`
+	Phone     string `json:"phone"`
 }
 
 //NewGetUserResponse construct GetUserResponse
@@ -19,10 +19,10 @@ func NewGetUserResponse(user user.User) *GetUserResponse {
 	var getUserResponse GetUserResponse
 
 	getUserResponse.ID = user.ID
-	getUserResponse.Name = user.Name
+	getUserResponse.Firstname = user.Firstname
+	getUserResponse.Lastname = user.Lastname
+	getUserResponse.Email = user.Email
 	getUserResponse.Username = user.Username
-	getUserResponse.ModifiedAt = user.ModifiedAt
-	getUserResponse.Version = user.Version
 
 	return &getUserResponse
 }
